--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "application-name",
+  "name": "af-rabbitmq-example",
   "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app"
-  },
   "dependencies": {
-    "express": "3.0.0rc1",
-    "jade": "*",
-    "amqp": "*",
-    "sanitizer": "*",
-    "path": "*"
+    "express": "*",
+    "amqp": "*"
   }
 }
